[package]
name = "anifetch"
version = "0.0.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.5.4"
clap_derive = "4.5.4"
colored = "2.1.0"
reqwest = "0.11.22"
serde = { version = "1.0.202", features = ["derive"] }
serde_json = "1.0.108"
tokio = { version = "1.34.0", features = ["full"] }
